# solar-system-simulation

./: CMakeLists.txt  README.md  main.cpp
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/stb/include/stb/: stb_image.h
Shaders/: background.frag  background.vert  default.frag  default.vert  light.frag  light.vert  trail.frag  trail.vert
Util/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.h  VBO.cpp  VBO.h
